--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </header>
 
-    <section id="message">
+    <section id="message" class="show-message">
         <div class="container">
             <div class="row">
                 <div class="column twelve">
@@ -116,6 +116,6 @@
         </div>
     </section>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <script src="assets/scripts/main.js"></script>
+    <script src="assets/scripts/main.min.js"></script>
 </body>
 </html>
